endpoint to get me, cli asks for user id using it if not set
